--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -340,8 +340,9 @@ ul#nav li.current a {
 
 #portfolio {
   background: #ebeeee;
-  padding-top: 90px;
-  padding-bottom: 60px;
+  color: red !important;
+  padding-top: 100px;
+  padding-bottom: 75px;
 }
 #portfolio h1 {
   font: 15px/24px "opensans-semibold", sans-serif;
@@ -355,6 +356,9 @@ ul#nav li.current a {
 #portfolio-wrapper {
   display: flex;
   flex-wrap: wrap;
+  align-items: right;
+  width: 200%;
+  margin-left: 20%;
 }
 
 /* Portfolio Content */
@@ -394,8 +398,6 @@ ul#nav li.current a {
   -moz-transition: opacity 0.3s ease-in-out;
   -o-transition: opacity 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out;
-
-  background: url(../images/overlay-bg.png) repeat;
 }
 .portfolio-item .item-wrap .link-icon {
   display: block;
@@ -428,11 +430,12 @@ ul#nav li.current a {
   padding: 18px;
 }
 .portfolio-item .portfolio-item-meta h5 {
-  font: 14px/21px "opensans-bold", sans-serif;
-  color: #fff;
+  margin-top: 35%;
+  font: 25px/26px "opensans-bold", sans-serif;
+  color: rgba(128, 128, 128, 0.61);
 }
 .portfolio-item .portfolio-item-meta p {
-  font: 12px/18px "opensans-light", sans-serif;
+  font: 20px/21px "opensans-light", sans-serif;
   color: #c6c7c7;
   margin-bottom: 0;
 }
@@ -550,7 +553,7 @@ ul#nav li.current a {
   box-shadow: inset 0 0 3px rgba(255, 255, 255, 0.3);
 }
 .flex-control-paging li a:hover {
-  background: #ccc;
+  background: rgb(80, 79, 79);
   background: rgba(255, 255, 255, 0.7);
 }
 .flex-control-paging li a.flex-active {
